--- a/06Melon100Chart.ipynb
+++ b/06Melon100Chart.ipynb
@@ -1748,15 +1748,24 @@
    "id": "4c66307e-91d6-422a-ad4d-e516efd716f6",
    "metadata": {},
    "source": [
-    "### SqlAlchemy와 Pymysql을 사용하여 DataFrame을 DB에 테이블로 저장하기"
+    "### SqlAlchemy와 Pymysql을 사용하여 DataFrame을 RDB의 테이블로 저장하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "8090ccc6-8f79-46ab-9961-33e4a9a3fe16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'sqlalchemy.engine.base.Engine'> Engine(mysql+pymysql://python:***@localhost:3306/python_db)\n",
+      "<class 'sqlalchemy.engine.base.Connection'> <sqlalchemy.engine.base.Connection object at 0x000002140F33D6D0>\n"
+     ]
+    }
+   ],
    "source": [
     "import pymysql\n",
     "import sqlalchemy\n",
@@ -1768,9 +1777,9 @@
     "try:\n",
     "    # dialect+driver://username:password@host:port/database\n",
     "    engine = create_engine('mysql+pymysql://python:python@localhost:3306/python_db', encoding='utf-8')\n",
-    "    #print(type(engine), engine)\n",
+    "    print(type(engine), engine)\n",
     "    conn = engine.connect()\n",
-    "    #print(type(conn), conn)\n",
+    "    print(type(conn), conn)\n",
     "    \n",
     "    #song_df(DataFrame객체)를 songs 테이블로 저장하기 to_sql() 함수 사용\n",
     "    song_df.to_sql(name='songs', con=engine, if_exists='replace', index=False)\n",
@@ -1778,6 +1787,25 @@
     "    conn.close()\n",
     "    engine.dispose()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a92384f-887b-4cc7-94a1-b77d943782e8",
+   "metadata": {},
+   "source": [
+    "### DataFrame을 Table로 저장\n",
+    "* 컬럼명을 영문으로 변경\n",
+    "* 인덱스를 1부터 시작하도록 변경하고 데이터프레임객체의 인덱스가 테이블의 PK(primary key)가 되도록 설정\n",
+    "* 테이블의 데이터 타입을 변경 (발매일을 DATE 타입으로 변경)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b30fd07c-a1a5-49a2-a10b-fdaa46db309f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
