--- a/06Melon100Chart.ipynb
+++ b/06Melon100Chart.ipynb
@@ -1965,13 +1965,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "cfc84fc5-9c16-4536-83fd-ecb70ae45124",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>singer</th>\n",
+       "      <th>album</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>url</th>\n",
+       "      <th>lyric</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GANADARA (Feat. 아이유)</td>\n",
+       "      <td>박재범</td>\n",
+       "      <td>GANADARA</td>\n",
+       "      <td>2022.03.11</td>\n",
+       "      <td>R&amp;B/Soul</td>\n",
+       "      <td>45545</td>\n",
+       "      <td>https://www.melon.com/song/detail.htm?songId=3...</td>\n",
+       "      <td>길거리를 걷다 보면사랑 노래만 흘러나와나는 왜 저런 게 낯설까난 한국말까지 서툴러번...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>INVU</td>\n",
+       "      <td>태연 (TAEYEON)</td>\n",
+       "      <td>INVU - The 3rd Album</td>\n",
+       "      <td>2022.02.14</td>\n",
+       "      <td>댄스</td>\n",
+       "      <td>81626</td>\n",
+       "      <td>https://www.melon.com/song/detail.htm?songId=3...</td>\n",
+       "      <td>Falling in love너에겐 난 Option시작부터 다른 너와 나깨지는 Hea...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  title        singer                 album release_date  \\\n",
+       "0  GANADARA (Feat. 아이유)           박재범              GANADARA   2022.03.11   \n",
+       "1                  INVU  태연 (TAEYEON)  INVU - The 3rd Album   2022.02.14   \n",
+       "\n",
+       "      genre  likes                                                url  \\\n",
+       "0  R&B/Soul  45545  https://www.melon.com/song/detail.htm?songId=3...   \n",
+       "1        댄스  81626  https://www.melon.com/song/detail.htm?songId=3...   \n",
+       "\n",
+       "                                               lyric  \n",
+       "0  길거리를 걷다 보면사랑 노래만 흘러나와나는 왜 저런 게 낯설까난 한국말까지 서툴러번...  \n",
+       "1  Falling in love너에겐 난 Option시작부터 다른 너와 나깨지는 Hea...  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_df.columns = ['title','singer','album','release_date','genre','likes','url','lyric']\n",
+    "table_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7c52ad5a-4443-45c3-9555-174052c6560c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([  1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,  13,\n",
+       "             14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,  26,\n",
+       "             27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,  39,\n",
+       "             40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51,  52,\n",
+       "             53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63,  64,  65,\n",
+       "             66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76,  77,  78,\n",
+       "             79,  80,  81,  82,  83,  84,  85,  86,  87,  88,  89,  90,  91,\n",
+       "             92,  93,  94,  95,  96,  97,  98,  99, 100],\n",
+       "           dtype='int64')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#index 변경\n",
+    "table_df.index = np.arange(1, len(table_df)+1)\n",
+    "table_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "010769f4-2bb5-4eda-91b5-5cd6bcab862d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_df.columns = ['title','singer','album','release_date','genre','likes','lyric']\n",
-    "table_df.head(2)"
+    "import pymysql\n",
+    "import sqlalchemy\n",
+    "\n",
+    "#pymysql과 sqlalchemy 연동\n",
+    "pymysql.install_as_MySQLdb()\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "try:\n",
+    "    # dialect+driver://username:password@host:port/database\n",
+    "    engine = create_engine('mysql+pymysql://python:python@localhost:3306/python_db', encoding='utf-8')\n",
+    "    conn = engine.connect()\n",
+    "    \n",
+    "    #['title','singer','album','release_date','genre','likes','lyric']\n",
+    "    #table_df(DataFrame객체)를 songs100 테이블로 저장하기 to_sql() 함수 사용\n",
+    "    table_df.to_sql(name='songs100', con=engine, if_exists='replace', index=True,\\\n",
+    "                    index_label='id',\n",
+    "                    dtype={\n",
+    "                        'id':sqlalchemy.types.INTEGER(),\n",
+    "                        'title':sqlalchemy.types.VARCHAR(200),\n",
+    "                        'singer':sqlalchemy.types.VARCHAR(200),\n",
+    "                        'album':sqlalchemy.types.VARCHAR(200),\n",
+    "                        'release_date':sqlalchemy.types.DATE,\n",
+    "                        'genre':sqlalchemy.types.VARCHAR(200),\n",
+    "                        'likes':sqlalchemy.types.BigInteger,\n",
+    "                        'lyric':sqlalchemy.types.VARCHAR(3000)\n",
+    "                    })\n",
+    "finally:\n",
+    "    conn.close()\n",
+    "    engine.dispose()"
    ]
   }
  ],
