--- a/01python_basic.ipynb
+++ b/01python_basic.ipynb
@@ -344,6 +344,29 @@
     "my_set = set([1,2,3,3,5,5])\n",
     "my_set"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b5b5e042-9bfe-46fc-bd95-47f15b83884b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'정당': '민주당', '선거구': '서울은평'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt_list=['정당','선거구']\n",
+    "dd_list=['민주당','서울은평']\n",
+    "dict(zip(dt_list,dd_list))"
+   ]
   }
  ],
  "metadata": {
